# garmin-readiness

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ai_endurance_coach_over50/: alerts.py  analysis.py  body.py  cli.py  client.py  history.py  hr_plan.py  llm.py  mersea_routes.py  metrics.py  nutrition_plan.py  plan.py  report.py  server.py  withings.py
ai_endurance_coach_over50/templates/: body.html  calendar.html  coach_tab.html  compliance.html  hr_calendar.html  mersea.html  nutrition.html  performance.html  sleep.html
docs/: README.md  build-pdf.sh  concepts.md  email-and-automation.md  faq.md  getting-started.md
docs/tabs/: coach.md  events.md  health.md  performance.md  plan.md  readiness.md
garmin_readiness/: alerts.py  analysis.py  body.py  cli.py  display.py  history.py  hr_plan.py  metrics.py  modulation.py  nutrition_plan.py  plan.py  report.py  server.py  withings.py  workouts.py
garmin_readiness/templates/: analysis.html  body.html  calendar.html  coach_chat.html  coach_tab.html  dashboard.html  hr_calendar.html  nav.html  nutrition.html  performance.html  sleep.html  tenerife.html  training.html
tests/: conftest.py  test_alerts.py  test_history_math.py  test_modulation.py  test_plan.py
