[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-endurance-coach-over50"
version = "0.1.0"
description = "AI endurance coaching dashboard for the 50+ athlete, powered by Garmin Connect data and Claude AI"
requires-python = ">=3.10"
dependencies = [
    "garminconnect>=0.3.6",  # 0.3.6 added get_scheduled_workouts/unschedule_workout (per-date push) and renumbered SportType/TargetType
    "rich>=13.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "anthropic>=0.20",
]

[project.scripts]
endurance-coach = "ai_endurance_coach_over50.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_endurance_coach_over50"]
